--- a/doc/Arquitectura.tex
+++ b/doc/Arquitectura.tex
@@ -1,18 +1,17 @@
 %!TeX root=MemoriaTFG.tex
 
 \chapter{Arquitectura de la aplicación}
-
-%Qué se puede hacer con TrackSimulator
-En esta sección presentamos la arquitectura de la aplicación. Realizaremos una 
-descripción de las funcionalidades que presenta y de los módulos de los que consta.
+En esta sección se presenta la arquitectura de la aplicación. Se realiza una 
+descripción de las funcionalidades que lo componen, se definenen los requerimientos necesarios 
+para su construcción y por último una explicación de la implementación, mostrando las herramientas 
+usadas.
 
 \section{\textit{TrackSimulator}}
-\textit{TrackSimulator} es un generador pseudo-aleatorio de trayectorias geoposicionales.
-
-Entendemos como simulación al proceso de recrear el comportamiento, en este caso el camino 
-de usuarios dentro de un espacio geográfico. Como muestra esencial y discreta del comportamiento de la 
-población se usan registros que han sido obtenidos mediante localización \ac{GPS}. En la figura X
-se muestra un ejemplo de una detección del recorrido de un individuo.
+\textit{TrackSimulator} es un generador pseudo-aleatorio de trayectorias geoposicionales. Entendemos como 
+simulación al proceso de recrear el comportamiento, en este caso el camino de usuarios dentro de un espacio 
+geográfico. Como muestra esencial y discreta del comportamiento de la población se usan registros que han sido 
+obtenidos mediante localización \ac{GPS}. En la figura X se muestra un ejemplo de una detección del recorrido de 
+un individuo.
 
 \begin{figure}[htb]
 \begin{center}
