--- a/doc/MemoriaTFG.tex
+++ b/doc/MemoriaTFG.tex
@@ -97,6 +97,7 @@
 
 
 \renewcommand{\lstlistingname}{Algoritmo}
+\renewcommand{\lstlistlistingname}{Índice de \lstlistingname s}
 
 % Amb tcolorbox podeu definir caixes per llistats,
 % teoremes, exemples, ...
@@ -237,6 +238,7 @@
 \cleartorecto \listoffigures
 \cleartorecto \lstlistoflistings
 %\cleartorecto \listoftables 
+
 
 % Si apareixen molts acrònims a la documentació
 % convindrà fer-ne una llista. Podeu veure com
